external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_call_lhs_return.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_call_lhs_return.move:3:20
  │
3 │         (return ())(0, 1);
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected ';'

warning[W09004]: unnecessary trailing semicolon
  ┌─ tests/move_check/parser/invalid_call_lhs_return.move:3:20
  │
3 │         (return ())(0, 1);
  │         -----------^
  │         │          │
  │         │          Invalid trailing ';'
  │         │          A trailing ';' in an expression block implicitly adds a '()' value after the semicolon. That '()' value will not be reachable
  │         Any code after this expression will not be reached
  │
  = This warning can be suppressed with '#[allow(unused_trailing_semi)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

