external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_call_lhs_return.move
module 0x42::M {
    fun foo() {
        (return ())(0, 1);
    }
}
